--- a/app/src/main/res/layout/activity_fullscreen_image.xml
+++ b/app/src/main/res/layout/activity_fullscreen_image.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_dark"
-    tools:context="com.askoliv.app.FullscreenImageActivity">
+    tools:context="in.parapluie.app.FullscreenImageActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
