--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/sunny_skirt"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context="in.parapluie.app.LoginActivity">
 
 
     <TextView
