--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,8 @@
     <dimen name="help_vertical_padding">2dp</dimen>
     <dimen name="chat_image_size">280dp</dimen>
     <dimen name="chat_card_min_width">47dp</dimen>
+    <dimen name="badge_text_size">10sp</dimen>
+    <dimen name="badge_width">16dp</dimen>
 
     <dimen name="login_button_height">45dp</dimen>
     <dimen name="fb_login_vertical_padding">13dp</dimen>
