--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,9 @@
     <dimen name="title_text_size">16sp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin_broad">50dp</dimen>
+    <dimen name="activity_vertical_margin_broad">30dp</dimen>
+    <dimen name="activity_vertical_margin_very_broad">50dp</dimen>
+    <dimen name="activity_vertical_margin_extremely_broad">80dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin_narrow">8dp</dimen>
     <dimen name="activity_horizontal_margin_very_narrow">4dp</dimen>
@@ -77,7 +79,8 @@
     <dimen name="display_picture_size">120dp</dimen>
     <dimen name="placeholder_picture_height">280dp</dimen>
     <dimen name="display_name_margin_top">80dp</dimen>
-    <dimen name="placeholder_text_size">15sp</dimen>
+    <dimen name="placeholder_text_size">18sp</dimen>
     <dimen name="placeholder_text_size_large">20sp</dimen>
     <dimen name="longish_divider">320dp</dimen>
+    <dimen name="vertical_divider_long">80dp</dimen>
 </resources>
