--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <dimen name="chat_card_min_width">47dp</dimen>
     <dimen name="badge_text_size">10sp</dimen>
     <dimen name="badge_width">16dp</dimen>
+    <dimen name="chat_empty_state_illustration_size">250dp</dimen>
 
     <dimen name="login_button_height">45dp</dimen>
     <dimen name="fb_login_vertical_padding">13dp</dimen>
@@ -79,6 +80,7 @@
     <dimen name="display_picture_size">120dp</dimen>
     <dimen name="placeholder_picture_height">280dp</dimen>
     <dimen name="display_name_margin_top">80dp</dimen>
+    <dimen name="placeholder_text_size_small">16sp</dimen>
     <dimen name="placeholder_text_size">18sp</dimen>
     <dimen name="placeholder_text_size_large">20sp</dimen>
     <dimen name="longish_divider">320dp</dimen>
