--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -45,7 +45,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/onboarding_button"
             android:layout_gravity="bottom"
@@ -57,7 +57,6 @@
                 android:layout_height="@dimen/onboarding_button"
                 android:layout_gravity="bottom"
                 android:background="@color/colorPrimary"
-                android:onClick="nextButton"
                 android:text="Next"
                 android:textColor="@android:color/white" />
 
@@ -67,14 +66,13 @@
                 android:layout_height="@dimen/onboarding_button"
                 android:layout_gravity="bottom"
                 android:background="@color/colorPrimary"
-                android:onClick="finishButton"
                 android:text="Get Started"
                 android:textColor="@android:color/white"
                 android:visibility="gone" />
-        </LinearLayout>
+        </LinearLayout>-->
     </FrameLayout>
 
-    <!--<android.support.design.widget.AppBarLayout
+    <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,16 +88,35 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
+            <Button
+                android:id="@+id/intro_btn_next"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/onboarding_button"
+                android:layout_gravity="bottom"
+                android:background="@color/colorPrimary"
+                android:text="Next"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/intro_btn_finish"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/onboarding_button"
+                android:layout_gravity="bottom"
+                android:background="@color/colorPrimary"
+                android:text="Get Started"
+                android:textColor="@android:color/white"
+                android:visibility="gone" />
+
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>-->
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/onboarding_bottom"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        />
 
     <!--<android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
