--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -14,30 +14,12 @@
         android:layout_height="wrap_content" />
 
 </RelativeLayout>-->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_horizontal_margin"
     tools:context="in.parapluie.app.PagerActivity$PlaceholderFragment">
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/section_img"
-            android:layout_width="192dp"
-            android:layout_height="192dp"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:alpha="0.30"
-            android:scaleType="fitCenter" />
-
-
-    </FrameLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,6 +28,15 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
+
+        <ImageView
+            android:id="@+id/section_img"
+            android:layout_width="192dp"
+            android:layout_height="192dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:alpha="1"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/section_label"
@@ -56,16 +47,16 @@
             tools:text="Page One" />
 
         <TextView
+            android:id="@+id/section_label_desc"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:alpha="0.7"
             android:gravity="center"
-            android:text="long description here about feature."
             android:textColor="@android:color/darker_gray" />
 
 
     </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
