--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -6,18 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/colorWhite"
     tools:context="in.parapluie.app.PagerActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/onboarding_bottom"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_gravity="center|bottom">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingBottom="@dimen/onboarding_button"
+            android:layout_marginBottom="@dimen/activity_vertical_margin_broad"
             android:orientation="horizontal">
 
             <ImageView
@@ -114,9 +116,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/onboarding_bottom"
-        />
+        android:layout_height="match_parent" />
 
     <!--<android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
