--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="title_text_size">16sp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin_broad">30dp</dimen>
     <dimen name="activity_margin_half">8dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_margin_broad">30dp</dimen>
@@ -30,6 +31,7 @@
     <dimen name="badge_width">16dp</dimen>
     <dimen name="chat_empty_state_illustration_size">250dp</dimen>
 
+    <dimen name="login_logo_size">80dp</dimen>
     <dimen name="login_button_height">45dp</dimen>
     <dimen name="fb_login_vertical_padding">13dp</dimen>
     <dimen name="fb_login_horizontal_margin">10dp</dimen>
@@ -38,6 +40,7 @@
     <dimen name="google_login_padding">5dp</dimen>
     <dimen name="word_spacing">2dp</dimen>
     <dimen name="login_privacy_promise_size">12sp</dimen>
+    <dimen name="app_name_login_width">240dp</dimen>
 
     <dimen name="high_elevation">4dp</dimen>
     <dimen name="medium_elevation">2dp</dimen>
@@ -46,7 +49,8 @@
     <dimen name="cardview_medium_elevation">2dp</dimen>
     <dimen name="cardview_corner_radius">3dp</dimen>
 
-    <dimen name="app_name_fullscreen_text_size">35sp</dimen>
+    <dimen name="app_name_fullscreen_text_size">32sp</dimen>
+    <dimen name="app_subtitle_fullscreen_text_size">18sp</dimen>
     <dimen name="hint_text_size">16sp</dimen>
     <dimen name="message_text_size">15sp</dimen>
     <dimen name="message_timestamp_size">10sp</dimen>
@@ -90,4 +94,6 @@
     <dimen name="placeholder_text_size_large">20sp</dimen>
     <dimen name="longish_divider">320dp</dimen>
     <dimen name="vertical_divider_long">80dp</dimen>
+
+    <dimen name="onboarding_image_height">400dp</dimen>
 </resources>
