--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -24,26 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:id="@+id/section_img"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/onboarding_image_height"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="@dimen/activity_vertical_margin_narrow" />
-
-        <TextView
-            android:id="@+id/section_label"
-            style="@style/TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorSecondary"
-            android:layout_below="@id/section_img"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
-            tools:text="Page One" />
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/section_label_desc"
@@ -51,11 +32,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin_extremely_narrow"
-            android:layout_below="@id/section_label"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin_narrow"
+            android:paddingRight="@dimen/activity_horizontal_margin_narrow"
+            android:layout_alignParentBottom="true"
             android:alpha="0.7"
             android:gravity="center"
             android:textColor="@color/colorDisabled" />
 
+        <TextView
+            android:id="@+id/section_label"
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorSecondary"
+            android:layout_above="@id/section_label_desc"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            tools:text="Page One" />
+
+        <ImageView
+            android:id="@+id/section_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@id/section_label"
+            android:layout_marginBottom="@dimen/activity_vertical_margin_narrow" />
 
 
     </RelativeLayout>
