--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -9,17 +9,43 @@
     android:background="@color/colorWhite"
     tools:context="in.parapluie.app.PagerActivity">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/onboarding_bottom"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_height="match_parent"
         android:layout_gravity="center|bottom">
 
         <LinearLayout
+            android:id="@+id/intro_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/onboarding_button"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/intro_btn_next"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/onboarding_button"
+                android:background="@color/colorPrimary"
+                android:text="Next"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/intro_btn_finish"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/onboarding_button"
+                android:background="@color/colorPrimary"
+                android:text="Get Started"
+                android:textColor="@android:color/white"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/intro_indicators"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/activity_vertical_margin_broad"
+            android:layout_above="@id/intro_buttons"
+            android:layout_centerHorizontal="true"
             android:orientation="horizontal">
 
             <ImageView
@@ -47,6 +73,18 @@
 
         </LinearLayout>
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@id/intro_indicators"
+            android:layout_gravity="center"/>
+
+
+
+
         <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/onboarding_button"
@@ -72,9 +110,9 @@
                 android:textColor="@android:color/white"
                 android:visibility="gone" />
         </LinearLayout>-->
-    </FrameLayout>
+    </RelativeLayout>
 
-    <android.support.design.widget.AppBarLayout
+    <!--<android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,7 +126,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/intro_btn_next"
@@ -111,12 +150,9 @@
 
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>-->
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
 
     <!--<android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
