text button in share image - full length mResolvedRef created

--- a/app/src/main/res/layout/activity_image_confirmation.xml
+++ b/app/src/main/res/layout/activity_image_confirmation.xml
@@ -20,7 +20,7 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/sendImageText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
