--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,8 +26,8 @@
     <color name="sunny">#FFF275</color>
     <color name="timberwolf">#DAD6D6</color>
     <color name="papaya_whip">#FDF0D5</color>
-    <color name="test1">#069696</color>
-    <color name="test2">#816E94</color>
+    <color name="purple_light">#f3e5f5</color>
+    <color name="light_brown">#bcaaa4</color>
     <color name="test3">#FFE2D1</color>
     <color name="test4">#357266</color>
     <color name="test5">#6BAB90</color>
