--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,39 +26,24 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/display_name_size"
             android:textColor="@color/colorSecondary"/>
+        <TextView
+            android:id="@+id/subscriptionEndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin_narrow"
+            android:textSize="@dimen/placeholder_text_size_smaller"/>
         <View
             android:layout_width="@dimen/longish_divider"
             android:layout_height="1dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin_broad"
+            android:layout_marginTop="@dimen/activity_vertical_margin_very_narrow"
             android:background="@color/colorGrayBackground"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:weightSum="3">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_weight="1">
-                <TextView
-                    android:id="@+id/totalqueries"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/placeholder_text_size"
-                    android:textStyle="bold" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/profile_queries"/>
-            </LinearLayout>
-            <View
-                android:layout_width="1dp"
-                android:layout_height="@dimen/vertical_divider_long"
-                android:background="@color/colorGrayBackground"/>
+            android:weightSum="2">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
