--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -90,6 +90,7 @@
     <dimen name="display_picture_size">120dp</dimen>
     <dimen name="placeholder_picture_height">280dp</dimen>
     <dimen name="display_name_margin_top">80dp</dimen>
+    <dimen name="placeholder_text_size_smaller">14sp</dimen>
     <dimen name="placeholder_text_size_small">16sp</dimen>
     <dimen name="placeholder_text_size">18sp</dimen>
     <dimen name="placeholder_text_size_large">20sp</dimen>
